# envars2

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .readthedocs.yaml  ANALYSIS.md  ARCHITECTURE.md  Dockerfile  GEMINI.md  README.md  cli.py  envars-gcp.yml  envars.py  mkdocs.yml  pyproject.toml
.github/workflows/: blank.yml  pr-checks.yml  pre-commit.yml  pytest.yml
conductor/: product-guidelines.md  product.md  tech-stack.md  tracks.md
conductor/tracks/openbao_kms_20260206/: index.md  metadata.json  plan.md  spec.md
devops/: pr-buildspec.yml
docs/: ARCHITECTURE.md  ASSESSMENT.md  KEY_ROTATION.md  getting-started.md  index.md
docs/api-reference/: index.md  models.md
docs/project/: RUNNING_WITH_DOCKER.md  USAGE_AS_LIBRARY.md  changelog.md  contributing.md  license.md  security.md
docs/user-guide/: 01-configuration-file.md  02-cli-commands.md  03-secret-management.md  04-variable-templating.md  05-dynamic-variables.md  06-validation.md
src/envars/: aws_cloudformation.py  aws_kms.py  aws_ssm.py  cli.py  cloud_utils.py  gcp_kms.py  gcp_secret_manager.py  main.py  models.py  openbao_kms.py
tests/: test_aws_cloudformation.py  test_aws_kms.py  test_cli.py  test_cli_openbao.py  test_gcp_kms.py  test_integration_openbao.py  test_library.py  test_main.py  test_models.py  test_models_openbao.py  test_openbao_kms.py
