[project]
name = "envars"
version = "0.1.0"
description = "A modern Python CLI project"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
dependencies = [
    "rich>=14.0.0",
    "typer>=0.16.0",
    "pyyaml>=6.0",
]
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

[project.scripts]
envars = "cli:app"

[build-system]
requires = ["setuptools>=61.0.0"] # Removed rye
build-backend = "setuptools.build_meta"

[tool.uv]
# You can add uv specific configurations here if needed
# For example:
# no-binary = ["some-package"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # bugbear
    "C4", # comprehensions
    "TID",# tidy imports
    "UP", # pyupgrade
    "N",  # pep8-naming
    "D",  # pydocstyle (optional, enable if you want docstring checks)
    "S",  # bandit (basic security checks)
]
ignore = [
    "D100", # Missing docstring in public module
    "D104", # Missing docstring in public package
    "D107", # Missing docstring in __init__
]

[tool.ruff.lint.isort]
known-first-party = ["envars"]

[tool.ruff.lint.pydocstyle]
convention = "google" # Or "numpy", "pep257"

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "pytest>=8.4.1",
    "ruff>=0.12.2",
    "ty>=0.0.1a13",
]
